5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1798_2564.log
== SUBMITION (2019-06-10 15:33:04) 
-- CODE:
v = zeros(3, dtype=int )

for i in range(size(g):
	if(g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		v[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		v[2] = d
print(v)
-- EXECUTION TIME:
0.694865
-- ERROR:
  File "/home/codebench/codes/1798/2564/main.py", line 3
    for i in range(size(g):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:33:08) 
-- CODE:
v = zeros(3, dtype=int )

for i in range(size(g):
	if(g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		v[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		v[2] = d
print(v)
-- EXECUTION TIME:
0.730421
-- ERROR:
  File "/home/codebench/codes/1798/2564/main.py", line 3
    for i in range(size(g):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:33:40) 
-- CODE:
v = zeros(3, dtype=int)

for i in range(size(g)):
	if(g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		v[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		v[2] = d
print(v)
-- EXECUTION TIME:
0.93466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    v = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:33:46) 
-- CODE:
v = zeros(3, dtype=int)

for i in range(size(g)):
	if(g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		v[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		v[2] = d
print(v)
-- EXECUTION TIME:
0.693028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    v = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:34:46) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
0.825915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:34:50) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		v[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
0.539327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:01) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
0.574109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:13) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
3.32871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:13) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.39455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:14) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
5.04574
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:14) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
4.87782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:14) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
4.72171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:14) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
4.52522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:35:15) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.19546
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2564/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:35:19) 
-- CODE:
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    V = zeros(3, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:06) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.1293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:24) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.59157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:27) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
3.56423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:28) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
4.89799
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:29) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
7.91497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:29) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
9.74299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:30) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
11.0325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:32) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
4.97151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 3, in <module>
    a = array(evel(input()))
NameError: name 'evel' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:32) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(evel(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
2.74802
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2564/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:38) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.11364
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
